--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		body{
 			color: white;
 			font-family: Open Sans;
-			background: url("../image/background3.jpg");
+			background: url("background3.jpg");
 			background-size: cover;
 			background-position: center;
 		}
