--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head lang="en-US">
-		<title>Project 1</title>
+		<title>First Project</title>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
 			*{
@@ -106,7 +106,7 @@
 				<button onclick="myFunction()">Click me!</button>
 				<h3 class="hide">About me!</h3>
 				<p class="hide">I am Maruf Ahmed. I am student of Daffodil International University. I love to read, write, and help people also. In future, I wanted to be a web devloper.</p>
-				<img class="hide" src="../image/maruf-profile.jpg" alt="Maruf-Profile" style="width: 300px;float: left; height: 200px;">
+				<img class="hide" src="maruf-profile.jpg" alt="Maruf-Profile" style="width: 300px;float: left; height: 200px;">
 			</div>
 			<div class="visitor">
 				<h3>Visitor Details</h3>
