--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</ul>
 			</div>
 			<div class="about">
-				<p><strong>Click the button, and a show the magic</strong></p>
+				<p><strong>Click the button, and show the magic</strong></p>
 				<button onclick="myFunction()">Click me!</button>
 				<h3 class="hide">About me!</h3>
 				<p class="hide">I am Maruf Ahmed. I am student of Daffodil International University. I love to read, write, and help people also. In future, I wanted to be a web devloper.</p>
