--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<p><strong>Click the button, and show the magic</strong></p>
 				<button onclick="myFunction()">Click me!</button>
 				<h3 class="hide">About me!</h3>
-				<p class="hide">I am Maruf Ahmed. I am student of Daffodil International University. I love to read, write, and help people also. In future, I wanted to be a web devloper.</p>
+				<p class="hide">Hi! I am Maruf Ahmed. I am student of Daffodil International University. I love to read, write, and help people as well. In future, I wanted to be a web devloper.</p>
 				<img class="hide" src="maruf-profile.jpg" alt="Maruf-Profile" style="width: 300px;float: left; height: 200px;">
 			</div>
 			<div class="visitor">
