--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 		<nav class="nav">
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">News</a></li>
+				<li><a href="#">Programming</a></li>
+				<li><a href="#">Blog</a></li>
 				<li><a href="#">Contract</a></li>
 				<li><a href="#">About</a></li>
 			</ul>
