--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
 			}
 			a:link{
 				color: green;
+				background-color: transparent;
 				text-decoration: none;
 			}
 			a:hover{
 				color: red;
+				background-color: transparent;
+				text-decoration: none;
 			}
 
 		</style>
