--- a/index.html
+++ b/index.html
@@ -63,15 +63,17 @@
 			}
 			a:link{
 				color: green;
-				background-color: transparent;
 				text-decoration: none;
 			}
 			a:hover{
 				color: red;
-				background-color: transparent;
-				text-decoration: none;
 			}
-
+			a:visited{
+				color: gray;
+			}
+			a:active{
+				color: green;
+			}
 		</style>
 		<script>
 	function myFunction(){
