--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				text-align: center;
 				width: 20%;
 			}
-			li.a{
+			li.b{
 				list-style-type: none;
 				background-color: #e5e5e5;
 				padding: 8px;
@@ -94,10 +94,10 @@
 			<div class="social">
 				<h3>My social profile</h3>
 				<ul>
-					<li class="a"><a href="https://github.com/mdmaruf43" target="_blank">Github</a></li>
-					<li class="a"><a href="https://www.facebook.com/mdmaruf43" target="_blank">Facebook</a></li>
-					<li class="a"><a href="https://twitter.com/mdmaruf43" target="_blank">Twitter</a></li>
-					<li class="a"><a href="https://www.instagram.com/mdmaruf43" target="_blank">Intagrame</a></li>
+					<li class="b"><a href="https://github.com/mdmaruf43" target="_blank">Github</a></li>
+					<li class="b"><a href="https://www.facebook.com/mdmaruf43" target="_blank">Facebook</a></li>
+					<li class="b"><a href="https://twitter.com/mdmaruf43" target="_blank">Twitter</a></li>
+					<li class="b"><a href="https://www.instagram.com/mdmaruf43" target="_blank">Intagrame</a></li>
 				</ul>
 			</div>
 			<div class="about">
