--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</ul>
 			</div>
 			<div class="about">
-				<p><strong>Click the button, and show the magic</strong></p>
+				<p><strong>Click the button and show the magic!!!</strong></p>
 				<button onclick="myFunction()">Click me!</button>
 				<h3 class="hide">About me!</h3>
 				<p class="hide">Hi! I am Maruf Ahmed. I am student of Daffodil International University. I love to read, write, and help people as well. In future, I wanted to be a web devloper.</p>
