--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Programming</a></li>
 				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contract</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="main">
